<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.towns.mortgage_calculator_townsend.MenuActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/openMessage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterHVal"/>
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/textEditHVal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterLVal" />
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/textEditLVal"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterInsurance" />
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/textEditInsurance"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterInterest"/>
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/textEditInterest"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterTerm" />
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/textEditTerm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterStartDate" />
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/textEditStartYear"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterPropTax" />
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/textEditPropTax"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterHOA" />
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/textEditHOA"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:text="@string/mortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mortSumm" />
        <Button
            android:text="@string/payButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paySumm" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/errorMessage"
            android:textColor="@color/red"
            android:id="@+id/errorText"/>
    </LinearLayout>
</LinearLayout>